--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .container {
   width: 100%;
-  max-width: 1220px;
-  padding: 0 10px;
+  max-width: 600px;
+  padding: 20px 10px 10px 10px;
   margin: 0 auto;
 }
