--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #f0f0f0;
+}
+
 button {
   cursor: pointer;
   background: none;
+  border: none;
 }
 
 ul {
