--- a/src/components/track/index.module.scss
+++ b/src/components/track/index.module.scss
@@ -6,6 +6,19 @@
 
 .trackBtn {
   margin-right: 30px;
+  width: 100%;
+  max-width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition-duration: 0.3s;
+
+  &:hover {
+    background-color: #c86efc23;
+    transition-duration: 0.1s;
+  }
 }
 
 .trackPreview {
